--- a/QML  (Task- 2)  .ipynb
+++ b/QML  (Task- 2)  .ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvb0+Q3s0k6H2Cvym83fxz",
+      "authorship_tag": "ABX9TyO9fPGydHGG9gGW3exE/IRK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,6 +78,11 @@
         }
       ],
       "source": [
+        "#PAULI MATRICES AND EIGEN-ANALYSIS\n",
+        "\n",
+        "#31/07/2025\n",
+        "\n",
+        "\n",
         "import numpy as np\n",
         "from numpy.linalg import eig\n",
         "\n",
