--- a/QML  (Task- 2)  .ipynb
+++ b/QML  (Task- 2)  .ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9fPGydHGG9gGW3exE/IRK",
+      "authorship_tag": "ABX9TyO5MLZcHo417rieB7jYcXxW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         }
       ],
       "source": [
-        "#PAULI MATRICES AND EIGEN-ANALYSIS\n",
+        "# Aim : PAULI MATRICES AND EIGEN-ANALYSIS\n",
         "\n",
         "#31/07/2025\n",
         "\n",
