--- a/QML  (Task - 1) .ipynb
+++ b/QML  (Task - 1) .ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVYRdXB+ZkFrIMDfVAXP1i",
+      "authorship_tag": "ABX9TyNziYckLMLc5+BuOpK3C2th",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,10 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Mathematical model:\n",
+        "------------ -----\n",
+        "\n",
+        "\n",
         "1. Quantum State\n",
         "\n",
         "A quantum system is described by a state vector (also called a ket) in a complex Hilbert space H:\n",
