--- a/QML  (Task - 1) .ipynb
+++ b/QML  (Task - 1) .ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNziYckLMLc5+BuOpK3C2th",
+      "authorship_tag": "ABX9TyOo9Q1L1fl3C0v2Bydv670l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,46 @@
       ],
       "metadata": {
         "id": "Dygt0nS9Oi0d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "------------------------------------------------------------\n",
+        "Algorithm: Born Rule for Measurement Probabilities\n",
+        "------------------------------------------------------------\n",
+        "\n",
+        "\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "Steps:\n",
+        "\n",
+        "1. Initialize the normalized state vector |ψ⟩.\n",
+        "   Ensure that ⟨ψ|ψ⟩ = 1.\n",
+        "\n",
+        "2. Define the measurement operators { M̂ᵢ }.\n",
+        "   For projective (von Neumann) measurements:\n",
+        "       M̂ᵢ = |ϕᵢ⟩⟨ϕᵢ|\n",
+        "   where { |ϕᵢ⟩ } are orthonormal eigenstates of the observable.\n",
+        "\n",
+        "3. For each measurement outcome i:\n",
+        "   \n",
+        "   a. Compute the probability of obtaining outcome i:\n",
+        "        p(i) = ⟨ψ| M̂ᵢ† M̂ᵢ |ψ⟩\n",
+        "      (For projective measurements: p(i) = |⟨ϕᵢ|ψ⟩|² )\n",
+        "\n",
+        "   b. If p(i) > 0, compute the post-measurement state:\n",
+        "        |ψᵢ′⟩ = ( M̂ᵢ |ψ⟩ ) / √p(i)\n",
+        "\n",
+        "4. Verify normalization:\n",
+        "       ∑ᵢ p(i) = 1\n",
+        "\n",
+        "5. Output:\n",
+        "       The set of probabilities { p(i) }\n",
+        "       and the corresponding collapsed states { |ψᵢ′⟩ }"
+      ],
+      "metadata": {
+        "id": "vjwJs5IYREds"
       }
     },
     {
