--- a/QML  (Task- 2)  .ipynb
+++ b/QML  (Task- 2)  .ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5MLZcHo417rieB7jYcXxW",
+      "authorship_tag": "ABX9TyPt4tV/79ojFn67PKk54ch6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,128 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Prasanthsai0987/Quantum-Machine-Learning-Tasks-/blob/main/QML%20%20(Task-%202)%20%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TASK 2: PAULI MATRICES AND EIGEN-ANALYSIS\n",
+        "============================================================\n",
+        "\n",
+        "AIM:\n",
+        "-----\n",
+        "To study the properties of Pauli matrices (σx, σy, σz), apply them\n",
+        "to qubit basis states |0⟩ and |1⟩, and perform eigenvalue–eigenvector\n",
+        "analysis to understand their quantum behavior.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "twEiQ6fdObTO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "------------------------------------------------------------\n",
+        "ALGORITHM:\n",
+        "------------------------------------------------------------\n",
+        "\n",
+        "Step 1: Import required libraries (NumPy for matrix operations).\n",
+        "\n",
+        "Step 2: Define the three Pauli matrices:\n",
+        "           σx, σy, σz\n",
+        "\n",
+        "Step 3: Define qubit basis states:\n",
+        "           |0⟩ = [1, 0]\n",
+        "           |1⟩ = [0, 1]\n",
+        "\n",
+        "Step 4: Apply each Pauli matrix to the basis states to observe their\n",
+        "        transformation properties.\n",
+        "\n",
+        "Step 5: Define a function to perform eigen-analysis:\n",
+        "           - Compute eigenvalues and eigenvectors using numpy.linalg.eig()\n",
+        "           - Display results for each matrix\n",
+        "\n",
+        "Step 6: Call the function for σx, σy, and σz to obtain:\n",
+        "           - Eigenvalues (±1)\n",
+        "           - Corresponding normalized eigenvectors\n",
+        "\n",
+        "Step 7: Interpret results:\n",
+        "           - Verify Hermitian and unitary properties\n",
+        "           - Confirm that eigenvectors form orthonormal bases"
+      ],
+      "metadata": {
+        "id": "4XKOTqWrR_DE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MATHEMATICAL MODEL:\n",
+        "------------------------------------------------------------\n",
+        "\n",
+        "1. Pauli Matrices:\n",
+        "\n",
+        "σx = [[0, 1],\n",
+        "      [1, 0]]\n",
+        "\n",
+        "σy = [[0, -i],\n",
+        "      [i,  0]]\n",
+        "\n",
+        "σz = [[1,  0],\n",
+        "      [0, -1]]\n",
+        "\n",
+        "Each Pauli matrix is Hermitian (σ = σ†) and unitary (σ σ† = I).\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "2. Qubit Basis States:\n",
+        "\n",
+        "|0⟩ = [1, 0]ᵀ\n",
+        "|1⟩ = [0, 1]ᵀ\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "3. Action of Pauli Matrices on Qubit States:\n",
+        "\n",
+        "σx|0⟩ = |1⟩\n",
+        "σx|1⟩ = |0⟩\n",
+        "\n",
+        "σy|0⟩ = i|1⟩\n",
+        "σy|1⟩ = -i|0⟩\n",
+        "\n",
+        "σz|0⟩ = |0⟩\n",
+        "σz|1⟩ = -|1⟩\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "4. Eigenvalue Equation:\n",
+        "\n",
+        "For each Pauli matrix σᵢ (i ∈ {x, y, z}):\n",
+        "\n",
+        "σᵢ |ψ⟩ = λ |ψ⟩\n",
+        "\n",
+        "where λ is an eigenvalue and |ψ⟩ is the corresponding eigenvector.\n",
+        "\n",
+        "The eigenvalues for all Pauli matrices are:\n",
+        "\n",
+        "λ₁ = +1\n",
+        "λ₂ = -1\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "5. Eigenvectors:\n",
+        "\n",
+        "Pauli-X:\n",
+        "   Eigenvectors → (|0⟩ ± |1⟩)/√2\n",
+        "   Eigenvalues → +1, -1\n",
+        "\n",
+        "Pauli-Y:\n",
+        "   Eigenvectors → (|0⟩ ± i|1⟩)/√2\n",
+        "   Eigenvalues → +1, -1\n",
+        "\n",
+        "Pauli-Z:\n",
+        "   Eigenvectors → |0⟩, |1⟩\n",
+        "   Eigenvalues → +1, -1\n"
+      ],
+      "metadata": {
+        "id": "9ztRC372OdZs"
+      }
     },
     {
       "cell_type": "code",
@@ -78,7 +200,7 @@
         }
       ],
       "source": [
-        "# Aim : PAULI MATRICES AND EIGEN-ANALYSIS\n",
+        "\n",
         "\n",
         "#31/07/2025\n",
         "\n",
