--- a/QML  (Task - 4)  .ipynb
+++ b/QML  (Task - 4)  .ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1bioy0D/WS7sAyhI/8z3r",
+      "authorship_tag": "ABX9TyNy7V1so/4xp8Wf3OJJDXLx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,133 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Prasanthsai0987/Quantum-Machine-Learning-Tasks-/blob/main/QML%20%20(Task%20-%204)%20%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "============================================================\n",
+        "TASK 4: COMMUTATION RELATIONS AND EULER ANGLES\n",
+        "============================================================\n",
+        "\n",
+        "AIM:\n",
+        "-----\n",
+        "To verify the commutation and anti-commutation relations\n",
+        "of the Pauli matrices and to perform the Z–Y–Z Euler\n",
+        "angle decomposition of single-qubit unitary operators."
+      ],
+      "metadata": {
+        "id": "YR_046rUSRZk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "------------------------------------------------------------\n",
+        "ALGORITHM:\n",
+        "------------------------------------------------------------\n",
+        "\n",
+        "Step 1: Import required libraries (NumPy, SymPy, cmath).\n",
+        "\n",
+        "Step 2: Define Pauli matrices σx, σy, σz.\n",
+        "\n",
+        "Step 3: Define functions:\n",
+        "          comm(A, B)  → Compute commutator [A, B]\n",
+        "          anti(A, B)  → Compute anti-commutator {A, B}\n",
+        "\n",
+        "Step 4: Verify:\n",
+        "          [σx, σy] = 2iσz,\n",
+        "          [σy, σz] = 2iσx,\n",
+        "          [σz, σx] = 2iσy\n",
+        "          and\n",
+        "          {σi, σj} = 2δij I\n",
+        "\n",
+        "Step 5: Define helper functions for rotations:\n",
+        "          Rz(θ), Ry(θ), and Rx(θ)\n",
+        "\n",
+        "Step 6: Implement Euler decomposition function:\n",
+        "          decompose_zyz(U) →\n",
+        "             - Verify U is unitary\n",
+        "             - Extract global phase φ\n",
+        "             - Compute α, β, γ such that\n",
+        "               U = e^{iφ} Rz(α) Ry(β) Rz(γ)\n",
+        "\n",
+        "Step 7: Test decomposition for common gates:\n",
+        "          Rx(π/3), Ry(π/4), Rz(π/2), H, S, T\n",
+        "\n",
+        "Step 8: (Optional) Validate using Cirq unitary matrices.\n"
+      ],
+      "metadata": {
+        "id": "1cipm8zuSjmM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "------------------------------------------------------------\n",
+        "MATHEMATICAL MODEL:\n",
+        "------------------------------------------------------------\n",
+        "\n",
+        "1. Pauli Matrices:\n",
+        "\n",
+        "σx = [[0, 1],\n",
+        "      [1, 0]]\n",
+        "\n",
+        "σy = [[0, -i],\n",
+        "      [i,  0]]\n",
+        "\n",
+        "σz = [[1,  0],\n",
+        "      [0, -1]]\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "2. Commutation and Anti-Commutation Relations:\n",
+        "\n",
+        "Commutator:       [A, B] = A·B − B·A  \n",
+        "Anti-Commutator:  {A, B} = A·B + B·A\n",
+        "\n",
+        "For Pauli matrices:\n",
+        "   [σx, σy] = 2i σz\n",
+        "   [σy, σz] = 2i σx\n",
+        "   [σz, σx] = 2i σy\n",
+        "\n",
+        "   {σi, σj} = 2δij I    (where δij is the Kronecker delta)\n",
+        "\n",
+        "These relations confirm that the Pauli matrices form a\n",
+        "Lie algebra basis for SU(2).\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "3. Euler Angle Decomposition (Z–Y–Z Form):\n",
+        "\n",
+        "Any single-qubit unitary U ∈ SU(2) can be expressed as:\n",
+        "\n",
+        "U = e^{iφ} Rz(α) Ry(β) Rz(γ)\n",
+        "\n",
+        "where:\n",
+        "   Rz(θ) = [[e^{-iθ/2}, 0],\n",
+        "             [0, e^{iθ/2}]]\n",
+        "\n",
+        "   Ry(θ) = [[cos(θ/2), -sin(θ/2)],\n",
+        "             [sin(θ/2),  cos(θ/2)]]\n",
+        "\n",
+        "and φ, α, β, γ are the **Euler angles**.\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "4. Extraction of Euler Angles:\n",
+        "\n",
+        "Given a unitary U:\n",
+        "   (a) Remove global phase → det(U₀) = 1  \n",
+        "   (b) Compute:\n",
+        "       a = U₀₀,  b = U₀₁\n",
+        "       β = 2·arccos(|a|)\n",
+        "       If sin(β/2) ≠ 0:\n",
+        "           α = arg(a) + arg(b)\n",
+        "           γ = arg(a) − arg(b)\n",
+        "       Else:\n",
+        "           α = 2·arg(a),  γ = 0\n",
+        "   (c) Global phase: φ = (arg(det(U)))/2"
+      ],
+      "metadata": {
+        "id": "APsEaq7HSRP9"
+      }
     },
     {
       "cell_type": "code",
