--- a/QML  (Task - 5) .ipynb
+++ b/QML  (Task - 5) .ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMJryK+0qElsfQbwUh1XBe",
+      "authorship_tag": "ABX9TyNNWStTB3D6RjKgSYwMhXCU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,113 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Prasanthsai0987/Quantum-Machine-Learning-Tasks-/blob/main/QML%20%20(Task%20-%205)%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "============================================================\n",
+        "TASK 5: CNOT GATE SIMULATION USING QISKIT\n",
+        "============================================================\n",
+        "\n",
+        "AIM:\n",
+        "-----\n",
+        "To design, simulate, and analyze the Controlled-NOT (CNOT) gate\n",
+        "operation on all two-qubit computational basis states using Qiskit,\n",
+        "and to verify the truth table of the quantum CNOT gate."
+      ],
+      "metadata": {
+        "id": "Z-86AmeaS8ic"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "------------------------------------------------------------\n",
+        "ALGORITHM:\n",
+        "------------------------------------------------------------\n",
+        "\n",
+        "Step 1: Import libraries:\n",
+        "        - qiskit.QuantumCircuit\n",
+        "        - qiskit_aer.Aer\n",
+        "        - qiskit.visualization.plot_histogram\n",
+        "        - matplotlib.pyplot\n",
+        "\n",
+        "Step 2: Create a function cnot_circuit(input_state):\n",
+        "        - Initialize a 2-qubit, 2-classical-bit circuit\n",
+        "        - Set input state according to given bitstring\n",
+        "        - Apply CNOT with q₀ as control and q₁ as target\n",
+        "        - Measure both qubits\n",
+        "\n",
+        "Step 3: Simulate using Qiskit Aer simulator:\n",
+        "        - Use 'qasm_simulator'\n",
+        "        - Run circuit with 1000 shots\n",
+        "        - Collect measurement counts\n",
+        "\n",
+        "Step 4: Display:\n",
+        "        - Quantum circuit diagram\n",
+        "        - Measurement histogram\n",
+        "\n",
+        "Step 5: Repeat for all input states:\n",
+        "        |00⟩, |01⟩, |10⟩, |11⟩\n"
+      ],
+      "metadata": {
+        "id": "85GGHKjrTGt7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "------------------------------------------------------------\n",
+        "MATHEMATICAL MODEL:\n",
+        "------------------------------------------------------------\n",
+        "\n",
+        "1. Two-Qubit Basis States:\n",
+        "\n",
+        "|00⟩ = [1, 0, 0, 0]ᵀ\n",
+        "|01⟩ = [0, 1, 0, 0]ᵀ\n",
+        "|10⟩ = [0, 0, 1, 0]ᵀ\n",
+        "|11⟩ = [0, 0, 0, 1]ᵀ\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "2. CNOT Gate Representation:\n",
+        "\n",
+        "The Controlled-NOT (CNOT) gate acts on two qubits:\n",
+        "- The first qubit is the **control**.\n",
+        "- The second qubit is the **target**.\n",
+        "\n",
+        "Matrix form (control = q₀, target = q₁):\n",
+        "\n",
+        "CNOT =\n",
+        "|00⟩⟨00| + |01⟩⟨01| + |11⟩⟨10| + |10⟩⟨11| =\n",
+        "[[1, 0, 0, 0],\n",
+        " [0, 1, 0, 0],\n",
+        " [0, 0, 0, 1],\n",
+        " [0, 0, 1, 0]]\n",
+        "\n",
+        "Action on basis states:\n",
+        "\n",
+        "CNOT |00⟩ → |00⟩  \n",
+        "CNOT |01⟩ → |01⟩  \n",
+        "CNOT |10⟩ → |11⟩  \n",
+        "CNOT |11⟩ → |10⟩\n",
+        "\n",
+        "Thus, the target qubit flips **only** when the control qubit is |1⟩.\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "3. Quantum Circuit Description:\n",
+        "\n",
+        "- 2 Qubits: q₀ (control), q₁ (target)\n",
+        "- 2 Classical bits for measurement\n",
+        "- Operations:\n",
+        "    a) Prepare input basis state |ab⟩\n",
+        "       → apply X gate to q₀ if a = 1\n",
+        "       → apply X gate to q₁ if b = 1\n",
+        "    b) Apply CNOT gate: qc.cx(0, 1)\n",
+        "    c) Measure both qubits\n"
+      ],
+      "metadata": {
+        "id": "NwXUUamOS8X8"
+      }
     },
     {
       "cell_type": "code",
