--- a/QML  (Task - 6) .ipynb
+++ b/QML  (Task - 6) .ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEOi71kVQIzRKEpCr78W6n",
+      "authorship_tag": "ABX9TyOuMbmHuuAm1KoCpCswHuwI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,158 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Prasanthsai0987/Quantum-Machine-Learning-Tasks-/blob/main/QML%20%20(Task%20-%206)%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "============================================================\n",
+        "TASK 6: SHOR CODE – QUANTUM ERROR CORRECTION SIMULATION\n",
+        "============================================================\n",
+        "\n",
+        "AIM:\n",
+        "-----\n",
+        "To implement and simulate Shor’s 9-qubit Quantum Error Correction (QEC)\n",
+        "code using Qiskit, analyze the effect of noise on quantum computations,\n",
+        "and demonstrate how Shor’s code protects quantum information from\n",
+        "bit-flip (X) and phase-flip (Z) errors."
+      ],
+      "metadata": {
+        "id": "xiGT98ReThXM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "------------------------------------------------------------\n",
+        "ALGORITHM:\n",
+        "------------------------------------------------------------\n",
+        "\n",
+        "Step 1: Define the Shor encoding circuit (shor_encode):\n",
+        "        - Apply bit-flip and phase-flip encoding on 9 qubits.\n",
+        "\n",
+        "Step 2: Define a general quantum operations circuit:\n",
+        "        - Include gates H, Rx, Ry, Rz, S, T, CX, CZ, SWAP.\n",
+        "\n",
+        "Step 3: Create a simplified error correction function:\n",
+        "        - Apply placeholders for X and Z corrections.\n",
+        "\n",
+        "Step 4: Combine the encoding, operations, and correction\n",
+        "        into a full circuit (shor_qec_circuit).\n",
+        "        - Encode → Apply operations → Error correction → Decode → Measure.\n",
+        "\n",
+        "Step 5: Define a depolarizing noise model:\n",
+        "        - p1 = 0.01 (1-qubit gates)\n",
+        "        - p2 = 0.03 (2-qubit gates)\n",
+        "        - Add to all relevant gates in the noise model.\n",
+        "\n",
+        "Step 6: Run two simulations:\n",
+        "        a) Without error correction (single-qubit version)\n",
+        "        b) With full Shor QEC circuit\n",
+        "        Compare output statistics.\n",
+        "\n",
+        "Step 7: Inject a specific error (e.g., X on qubit 4)\n",
+        "        to demonstrate the correction process.\n",
+        "\n",
+        "Step 8: Visualize and analyze:\n",
+        "        - Display circuit diagrams.\n",
+        "        - Plot histograms of results (counts vs output bit).\n"
+      ],
+      "metadata": {
+        "id": "idrCKyh2Trvb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "------------------------------------------------------------\n",
+        "MATHEMATICAL MODEL:\n",
+        "------------------------------------------------------------\n",
+        "\n",
+        "1. Shor Code Structure:\n",
+        "------------------------\n",
+        "Shor’s code encodes one logical qubit |ψ⟩ = α|0⟩ + β|1⟩ into nine physical qubits.\n",
+        "\n",
+        "Encoding steps:\n",
+        "\n",
+        "|ψ⟩ → (α|0⟩ + β|1⟩)\n",
+        "       ↓ Bit-flip encoding (repetition)\n",
+        "       α|000⟩ + β|111⟩\n",
+        "       ↓ Phase-flip encoding (Hadamard + repetition)\n",
+        "       α(|+++⟩ + |−−−⟩) + β(|−−−⟩ + |+++⟩)\n",
+        "\n",
+        "Final encoded logical qubit:\n",
+        "|ψ_L⟩ = α|0_L⟩ + β|1_L⟩\n",
+        "\n",
+        "where,\n",
+        "|0_L⟩ = (|000⟩ + |111⟩)⊗(|000⟩ + |111⟩)⊗(|000⟩ + |111⟩) / 2√2  \n",
+        "|1_L⟩ = (|000⟩ − |111⟩)⊗(|000⟩ − |111⟩)⊗(|000⟩ − |111⟩) / 2√2\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "2. Error Model:\n",
+        "------------------------\n",
+        "Depolarizing channel applied to 1- and 2-qubit gates.\n",
+        "\n",
+        "Single-qubit depolarizing error:\n",
+        "   ρ → (1 − p₁)ρ + (p₁ / 3)(XρX + YρY + ZρZ)\n",
+        "\n",
+        "Two-qubit depolarizing error:\n",
+        "   ρ → (1 − p₂)ρ + (p₂ / 15)Σ (EρE†)  where E ∈ {I, X, Y, Z}⊗{I, X, Y, Z}\n",
+        "\n",
+        "Parameters used:\n",
+        "   p₁ = 0.01   (1-qubit gate error rate)\n",
+        "   p₂ = 0.03   (2-qubit gate error rate)\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "3. Error Correction Principle:\n",
+        "------------------------\n",
+        "- Bit-flip error (X): Corrected by majority voting on triplets.\n",
+        "- Phase-flip error (Z): Corrected after Hadamard transformation.\n",
+        "- Combined correction ensures robustness against both X and Z errors.\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "4. Quantum Circuits:\n",
+        "------------------------\n",
+        "(a) Shor Encoding Circuit:\n",
+        "    - Step 1: Bit-flip encoding using CNOTs (q0 → q3, q6)\n",
+        "    - Step 2: Phase-flip encoding using Hadamards and additional CNOTs\n",
+        "    - Total 9 qubits\n",
+        "\n",
+        "(b) Quantum Operations:\n",
+        "    - Apply various quantum gates (H, RX, RY, RZ, S, T, CX, CZ, SWAP)\n",
+        "      to simulate quantum computation and interaction with noise.\n",
+        "\n",
+        "(c) Error Correction Circuit (simplified):\n",
+        "    - Placeholder corrections (X and Z gates on selected qubits)\n",
+        "    - Demonstrates general correction procedure.\n",
+        "\n",
+        "(d) Decoding Circuit:\n",
+        "    - Apply inverse of Shor encoder\n",
+        "    - Measure logical qubit (q0)\n",
+        "\n",
+        "------------------------------------------------------------\n",
+        "5. Performance Comparison:\n",
+        "------------------------\n",
+        "Run simulations:\n",
+        "   1. Without Error Correction\n",
+        "   2. With Shor Error Correction\n",
+        "\n",
+        "Measure outcome probabilities for logical |0⟩ and |1⟩ states:\n",
+        "   p(0) = counts['0'] / total_shots\n",
+        "   p(1) = counts['1'] / total_shots\n",
+        "\n",
+        "Deviation metric:\n",
+        "   deviation = |0.5 - p(0)| × 200%\n"
+      ],
+      "metadata": {
+        "id": "Y6VyLR89Tm-U"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Zu1Rn4SfThPG"
+      }
     },
     {
       "cell_type": "code",
@@ -122,6 +274,8 @@
         }
       ],
       "source": [
+        "#4/9/2025\n",
+        "\n",
         "from qiskit import QuantumCircuit, transpile\n",
         "from qiskit_aer import AerSimulator\n",
         "from qiskit_aer.noise import NoiseModel, depolarizing_error\n",
@@ -324,6 +478,13 @@
         "\n",
         "    visualize_circuits()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "AvzFsjMwTful"
+      }
     },
     {
       "cell_type": "code",
